--- a/ranasujith/REGISTER/REGISTER/registration.html
+++ b/ranasujith/REGISTER/REGISTER/registration.html
@@ -9,10 +9,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
-  <title>Register</title>
+  <title>Login</title>
 </head>
 <body>
-  <form action="home-page.html">
+  <form action="action_page.php">
     <div class="container">
       <h1 style="font-family:'Poppins',sans-serif ;">Register</h1>
       <p style="font-family:'Poppins',sans-serif ;">Please fill in this form to create an account.</p>
@@ -32,14 +32,11 @@
       <hr>
   
       
-      <button type="submit" class="registerbtn" >Register</button>
+      <button type="submit" class="registerbtn">Register</button>
     </div>
   
     <div class="container signin">
       <p>Already have an account? <a href="index.html">Sign in</a>.</p>
-    </div>
-    <div class="container signin">
-      <p>Already have an account? <a href="home-page.html">Home Page</a>.</p>
     </div>
   </form>
 </body>
