--- a/ranasujith/REGISTER/REGISTER/index.html
+++ b/ranasujith/REGISTER/REGISTER/index.html
@@ -9,37 +9,29 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
-  <title>Register</title>
+  <title>Login</title>
 </head>
 <body>
-  <form action="home-page.html">
+  <form action="action_page.php">
     <div class="container">
-      <h1 style="font-family:'Poppins',sans-serif ;">Register</h1>
-      <p style="font-family:'Poppins',sans-serif ;">Please fill in this form to create an account.</p>
+      <h1 style="font-family:'Poppins',sans-serif ;">Login</h1>
+      <p style="font-family:'Poppins',sans-serif ;">Welcome back!</p>
       <hr>
   
       <label class="label_font" for="email"><b>Username</b></label>
       <input type="text" placeholder="Enter your name" name="name" id="name" required>
-
-      <label class="label_font" for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" id="email" required>
   
       <label class="label_font" for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
-  
-      <label class="label_font" for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
+
       <hr>
   
       
-      <button type="submit" class="registerbtn" >Register</button>
+      <a href="registration.html"><button type="submit" class="registerbtn"> Sign In</button></a>
     </div>
   
     <div class="container signin">
-      <p>Already have an account? <a href="index.html">Sign in</a>.</p>
-    </div>
-    <div class="container signin">
-      <p>Already have an account? <a href="home-page.html">Home Page</a>.</p>
+      <p>New User? <a href="registration.html">Register</a>.</p>
     </div>
   </form>
 </body>
